--- a/console.html
+++ b/console.html
@@ -3,9 +3,11 @@
 <html>
 
   <head>
-    
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./console.css">
     <title>homepage</title>
-<link rel="stylesheet" href="./console.css">
    
     <!--style>
     				
@@ -62,6 +64,14 @@
 
 
   <body>
+
+    <section class="parent">
+      <div class="children">Home</div>
+      <div class="children">Services</div>
+      <div class="children">Development</div>
+      <div class="children">Contact</div>
+    </section>
+    <br>
 
     <center>
       <span>Signup Page</span>
